fixed overlap of header/main on small screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -225,7 +225,7 @@ nav li:hover .sub-nav {
 #fixed img {
   position: fixed;
   right: 50px;
-  top: 2px;
+  top: 50px;
   width: 50px;
   height: 50px;
 }
@@ -234,4 +234,13 @@ footer {
   padding: 10px;
   color: #f4dfd0;
   text-align: center;
+}
+@media screen and (max-width: 600px) {
+  main {
+    margin-top: 100px;
+  }
+  #fixed img {
+    top: 150px;
+    right: 0px;
+  }
 }
